价格升降序更改

--- a/wechat/src/main/webapp/xcview/html/shop/search_goods.html
+++ b/wechat/src/main/webapp/xcview/html/shop/search_goods.html
@@ -122,7 +122,7 @@
 	        arr.unshift(queryKey);
 	        localStorage.setItem(hisArr,arr);
 			
-			location.href="../html/search_listings.html?queryKey="+queryKey+"&curriculum_blck=2";
+			location.href="/xcview/html/shop/search_listings.html?queryKey="+queryKey+"&curriculum_blck=2";
 		}
 
 		//历史记录删除事件
