修改评价  空状态。全部推荐传的参数

--- a/wechat/src/main/webapp/xcview/html/shop/all_evaluation.html
+++ b/wechat/src/main/webapp/xcview/html/shop/all_evaluation.html
@@ -72,7 +72,7 @@
 </style>
 </head>
 
-<body style="background: #F0F0F0;">
+<body style="background: #F8F8F8;">
 	<!-- 头部区域开始 -->
 	<header>
 		<div class="header" id="header">
@@ -85,7 +85,7 @@
 			</div>
 			<div class="advices">
 				<img src="/xcview/images/shop/newsbg.png" alt="" class="news news_class">
-				<span class="advices_number">17</span>
+				<!--<span class="advices_number">17</span>-->
 			</div>
 			<!-- <img src="/xcview/images/share_img.png" alt="" class="share share_class"> -->
 		</div>
@@ -116,6 +116,10 @@
 					</script>
 				</div>
 			</div>	
+		</div>
+		<div class="quie_pic">
+			<img src="/xcview/images/no_comment_hui.png">	
+			<p>还没有评价？快来抢沙发呀~</p>
 		</div>
 	</div>
 	<!-- 中间区域结束 -->
