--- a/wechat/src/main/webapp/xcview/html/shop/commodity_details.html
+++ b/wechat/src/main/webapp/xcview/html/shop/commodity_details.html
@@ -346,7 +346,7 @@
 			<div class="shopping_cart" onclick="location.href ='/xcview/html/shop/shopping_trolley.html '">
 				<img src="/xcview/images/shop/shopping_cart.png" alt="" />
 				购物车
-				<span class="shopping_quantity">0</span>
+				<span class="shopping_quantity"></span>
 			</div>
 			<div class="deal">
 				<div class="add_cart">加入购物车</div>
@@ -532,6 +532,7 @@
 					    cartQuantity = parseInt(cartQuantity) + quantity;
 					}
                     $('.shopping_quantity').html(cartQuantity);
+                    
 				}
 			});
 		}else{
