默认五颗星

--- a/wechat/src/main/webapp/xcview/html/shop/shop-commentary.html
+++ b/wechat/src/main/webapp/xcview/html/shop/shop-commentary.html
@@ -40,12 +40,12 @@
 							</div>
 							<p class="ware-describe">描述相符</p>
 							<div class="select-impress y">  
-						        <img src="/xcview/images/xing1.png" alt="星星" />  
-						       	<img src="/xcview/images/xing1.png" alt="星星" />
-						       	<img src="/xcview/images/xing1.png" alt="星星" />
-						       	<img src="/xcview/images/xing1.png" alt="星星" />
-						       	<img src="/xcview/images/xing1.png" alt="星星" />
-						        <span></span>  
+						        <img src="/xcview/images/xing.png" alt="星星" />  
+						       	<img src="/xcview/images/xing.png" alt="星星" />
+						       	<img src="/xcview/images/xing.png" alt="星星" />
+						       	<img src="/xcview/images/xing.png" alt="星星" />
+						       	<img src="/xcview/images/xing.png" alt="星星" />
+						        <span>非常好</span>  
 						    </div> 
 						</div>
 						<div class="commentary-text">
