--- a/wechat/src/main/webapp/xcview/html/shop/shop.html
+++ b/wechat/src/main/webapp/xcview/html/shop/shop.html
@@ -268,6 +268,20 @@
          }
      });
  });
+
+ $(function(){
+     var wv = getParam("wv");
+     if(wv == null){
+         wv = localStorage.getItem("wv");
+     }else{
+         localStorage.setItem("wv",wv);
+     }
+     if(wv==null){
+         $(".footer").show();
+     }else{
+         $(".footer").hide();
+     }
+ })
 </script>
 
 <!-- 选项卡点击事件 -->
