--- a/wechat/src/main/webapp/xcview/html/shop/all_evaluation.html
+++ b/wechat/src/main/webapp/xcview/html/shop/all_evaluation.html
@@ -39,9 +39,9 @@
 
 	/*处理刷新*/
 	.minirefresh-wrap{
-		top: 1.1rem;
-		padding-bottom: 1.6rem
-		;
+		top: 0.9rem;
+		/*top: 1.1rem;*/
+		padding-bottom: 1.6rem;
 		z-index: -1;
 	}
 	.minirefresh-theme-default .minirefresh-downwrap{
