--- a/wechat/src/main/webapp/xcview/html/shop/commodity_details.html
+++ b/wechat/src/main/webapp/xcview/html/shop/commodity_details.html
@@ -532,7 +532,10 @@
 					} else {
 					    cartQuantity = parseInt(cartQuantity) + quantity;
 					}
-                    $('.shopping_quantity').html(cartQuantity);
+					
+					var preNumber = $(".shopping_quantity").html();
+					totalQuantity = Number(cartQuantity) + Number(preNumber);
+                    $('.shopping_quantity').html(totalQuantity);
                     
 				}
 			});
