评价发布验证

--- a/wechat/src/main/webapp/xcview/html/shop/shop-commentary.html
+++ b/wechat/src/main/webapp/xcview/html/shop/shop-commentary.html
@@ -5,6 +5,8 @@
 		<title></title>
 		<meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 		<link rel="stylesheet" href="/xcview/css/shop/shop-comment.css">
+		<!--提示-->
+		<link rel="stylesheet" href="/xcview/css/alert/sharecss.css">
 		<link rel="stylesheet" href="/xcview/css/shop/shop-commentary.css">
 		<script type="text/javascript" src="/xcview/js/common/jquery-2.1.1.min.js"></script>
 		<script>
@@ -40,11 +42,11 @@
 							</div>
 							<p class="ware-describe">描述相符</p>
 							<div class="select-impress y">  
-						        <img src="/xcview/images/xing.png" alt="星星" />  
-						       	<img src="/xcview/images/xing.png" alt="星星" />
-						       	<img src="/xcview/images/xing.png" alt="星星" />
-						       	<img src="/xcview/images/xing.png" alt="星星" />
-						       	<img src="/xcview/images/xing.png" alt="星星" />
+						        <img src="/xcview/images/xing.png" alt="星星" class="active" />  
+						       	<img src="/xcview/images/xing.png" alt="星星" class="active" />
+						       	<img src="/xcview/images/xing.png" alt="星星" class="active" />
+						       	<img src="/xcview/images/xing.png" alt="星星" class="active" />
+						       	<img src="/xcview/images/xing.png" alt="星星" class="active" />
 						        <span>非常好</span>  
 						    </div> 
 						</div>
@@ -105,7 +107,7 @@
 			<div class="seller-logistics">
 				<div class="seller-wrap">
 					<p>卖家服务</p>
-					<div class="select-impress z">  
+					<div class="select-impress seller-service z">  
 				        <img src="/xcview/images/xing1.png" alt="星星" />  
 				       	<img src="/xcview/images/xing1.png" alt="星星" />
 				       	<img src="/xcview/images/xing1.png" alt="星星" />
@@ -117,7 +119,7 @@
 				
 				<div class="seller-wrap">
 					<p>物流服务</p>
-					<div class="select-impress z">  
+					<div class="select-impress logistics-service z">  
 				        <img src="/xcview/images/xing1.png" alt="星星" />  
 				       	<img src="/xcview/images/xing1.png" alt="星星" />
 				       	<img src="/xcview/images/xing1.png" alt="星星" />
@@ -141,6 +143,8 @@
 		<script type="text/javascript" src="/xcview/js/common/template.js"></script> 
 		<!--上传照片JS-->
 		<script type="text/javascript" src="/xcview/js/shop/comment-pic-upload.js"></script>
+		<!--提示-->
+		<script type="text/javascript" src="/xcview/js/common/alertPopShow.js"></script> 
 		<script type="text/javascript" src="/xcview/js/shop/shop-commentary.js"></script>
 		<script type="text/javascript">
 //			上传照片部分JS
