[feat]商城-我的订单 移动端获取、传递token

--- a/wechat/src/main/webapp/xcview/html/shop/order_center.html
+++ b/wechat/src/main/webapp/xcview/html/shop/order_center.html
@@ -18,6 +18,52 @@
 
 <script type="text/javascript" src="/xcview/js/common/jquery.min-2.1.1.js"></script>
 <script type="text/javascript" src="/xcview/js/common/mui.min.js"></script>
+
+<script>
+	var getParam = function(name) {
+		var search = document.location.search;
+		//alert(search);
+		var pattern = new RegExp("[?&]" + name + "\=([^&]+)", "g");
+		var matcher = pattern.exec(search);
+		var items = null;
+		if(null != matcher) {
+			try {
+				items = decodeURIComponent(decodeURIComponent(matcher[1]));
+			} catch(e) {
+				try {
+					items = decodeURIComponent(matcher[1]);
+				} catch(e) {
+					items = matcher[1];
+				}
+			}
+		}
+		return items;
+	};
+
+	var wv = getParam("wv");
+	if(wv == null){
+		wv = localStorage.getItem("wv");
+	}else{
+		localStorage.setItem("wv",wv);
+	}
+//	if(wv==null){
+//		$(".footer").show();
+//	}else{
+//		$(".footer").hide();
+//	}
+
+	var token = getParam("token");
+	var appUniqueId = getParam("appUniqueId");
+	var APP_TOKEN = "app.token";
+	var APP_AppUniqueId = "app.appUniqueId";
+	if(token != null && appUniqueId != null){
+		localStorage.setItem(APP_TOKEN,token);
+		localStorage.setItem(APP_AppUniqueId,appUniqueId);
+	}else{
+		localStorage.removeItem(APP_TOKEN);
+		localStorage.removeItem(APP_AppUniqueId);
+	}
+</script>
 <script type="text/javascript" src="/xcview/js/common/common.js"></script>
 <!--刷新 -->
 <link rel="stylesheet" href="/xcview/css/minirefresh/minirefresh.css">
