购物车，添加浮动提示层。点击select选项  固定确定按钮

--- a/wechat/src/main/webapp/xcview/html/shop/confirm_order.html
+++ b/wechat/src/main/webapp/xcview/html/shop/confirm_order.html
@@ -16,6 +16,8 @@
 <script type="text/javascript" src="/xcview/js/common/layout.js"></script>
 
 <link type="text/css" rel="stylesheet" href="/xcview/css/shop/confirm_order.css" />
+<script type="text/javascript" src="/xcview/js/common/popups.js"></script>  <!-- 公用弹框 -->
+<link rel="stylesheet" type="text/css" href="/xcview/css/popups.css"/> <!-- 公用弹框 -->
 <script>
 	// 判断横屏展示时的状态
 	window.onorientationchange=function(){
