--- a/wechat/src/main/webapp/xcview/html/shop/all_evaluation.html
+++ b/wechat/src/main/webapp/xcview/html/shop/all_evaluation.html
@@ -300,6 +300,8 @@
 	        requestGetService("/xczh/shop/checkout?skuId="+skuId+"&quantity="+quantity,null,function(data){
 				if(data.success){
 					flag = true;
+				}else{
+					jqtoast(data.errorMessage);
 				}
 			},false);
 	        if(!flag){
