--- a/wechat/src/main/webapp/xcview/html/shop/recommend.html
+++ b/wechat/src/main/webapp/xcview/html/shop/recommend.html
@@ -291,6 +291,8 @@
         requestGetService("/xczh/shop/checkSku?skuId="+skuId+"&quantity="+quantity,null,function(data){
 			if(data.success){
 				flag = true;
+			}else{
+				jqtoast(data.errorMessage);
 			}
 		},false);
         if(!flag){
