修改地址管理返回事件

--- a/wechat/src/main/webapp/xcview/html/edit_address.html
+++ b/wechat/src/main/webapp/xcview/html/edit_address.html
@@ -236,7 +236,8 @@
    <!-- 编辑地址开始 -->
     <div class="site_edit" style="display: block;">
       <div class="sex_pet_name_top">
-        <div class="update_address_return" id="update_address_return"></div>
+        <!--<div class="update_address_return" id="update_address_return"></div>-->
+        <div class="update_address_return" onclick="javascript:history.go(-1);"></div>
         <div class="dl"
           >编辑地址</div>
         <div class="pet_name_right" id="address_save" style="margin-right:0.26rem;">保存</div>
