处理修改密码浮动提示层事件

--- a/wechat/src/main/webapp/xcview/html/amend.html
+++ b/wechat/src/main/webapp/xcview/html/amend.html
@@ -74,8 +74,12 @@
 <script type="text/javascript" src="/xcview/js/common/mui.min.js"></script>
 <script type="text/javascript" src="/xcview/js/common/common.js"></script>
 <!--公用弹框 -->
-<link rel="stylesheet" href="/xcview/css/alert/sharecss.css">
-<script type="text/javascript" src="/xcview/js/common/alertPopShow.js"></script>
+<!--<link rel="stylesheet" href="/xcview/css/alert/sharecss.css">
+<script type="text/javascript" src="/xcview/js/common/alertPopShow.js"></script>-->
+
+<!--新弹框引入-->
+<script type="text/javascript" src="/xcview/js/common/popups.js"></script>  <!-- 公用弹框 -->
+<link rel="stylesheet" type="text/css" href="/xcview/css/popups.css"/> <!-- 公用弹框 -->
 <script type="text/javascript" src="/xcview/js/amend.js?1234511116"></script>
 
 <script type="text/javascript">
