--- a/wechat/src/main/webapp/xcview/html/shop/line_item.html
+++ b/wechat/src/main/webapp/xcview/html/shop/line_item.html
@@ -76,14 +76,14 @@
 	<!-- 交易状态结束 -->
 
 	<!-- 物流信息开始=====等待卖家已发货-显示 -->
-	<div class="logistics" style="display: none;">
+	<div class="logistics" >
 		<div class="logistics_main">
 			<div class="trucks">
 				<img src="/xcview/images/shop/trucks.png" alt="" />
 			</div>
 			<div class="logistics_site">
-				<div class="logistics_sites">[嘉兴市]快件已从杭州中转部发出，准备发往广州中心</div>
-				<div class="data">2018-09-17 15:00</div>
+				<div class="logistics_sites"></div>
+				<div class="data"></div>
 			</div>
 			<div class="arrows">
 				<img src="/xcview/images/account05.png" alt="" />
