--- a/wechat/src/main/webapp/xcview/html/my_study.html
+++ b/wechat/src/main/webapp/xcview/html/my_study.html
@@ -78,7 +78,7 @@
 	<div class="wrap-header">
 		
 		<div class="header">
-			<div class="return" onclick="javascript:history.go(-1);">
+			<div class="return" onclick="common_share_backs();">
 				<img src="/xcview/images/backicon.png" alt="" />
 			</div>
 			<div class="title" ><p>学习</p></div>
