--- a/wechat/src/main/webapp/xcview/html/physician/apply_for.html
+++ b/wechat/src/main/webapp/xcview/html/physician/apply_for.html
@@ -73,7 +73,7 @@
 	<!-- 报名头部开始 -->
 	<header>
 		<div class="header">
-			<div class="return" onclick="window.history.go(-1);"><img src="/xcview/images/back%20icon.png" alt="" /></div>
+			<div class="return" onclick="window.history.back();"><img src="/xcview/images/back%20icon.png" alt="" /></div>
 			<div class="apply_title">成为弟子申请</div>
 		</div>
 	</header>
