--- a/wechat/src/main/webapp/xcview/html/details.html
+++ b/wechat/src/main/webapp/xcview/html/details.html
@@ -456,11 +456,10 @@ $(function(){
         <div class="grabble">
             <div class="grabble_top">
                 
-                <div class="grabble_left" onclick="isLoginJump()">  <!--onclick="isLoginJump()" ---这是上一版的返回点击事件   --> <!-- onclick="window.history.go(-1);" 这版 -->   
+                <div class="grabble_left" onclick="common_share_back()">  <!--onclick="isLoginJump()" ---这是上一版的返回点击事件   --> <!-- onclick="window.history.go(-1);" 这版 -->   
                     <div class="grabble_img"><img src="/xcview/images/back icon.png" alt="" /></div>
                 </div>
-
-                <span class="history_span"></span>
+                  <span class="history_span"></span>
                 <div class="history_img_right" id="share" style=""><div class="fx_bg"><img src="/xcview/images/share_img.png" alt="" /></div></div>
             </div>
         </div>
