--- a/wechat/src/main/webapp/xcview/html/shop/payment_success.html
+++ b/wechat/src/main/webapp/xcview/html/shop/payment_success.html
@@ -32,7 +32,7 @@
 	<!-- 头部区域开始 -->
 	<header>
 		<div class="header">
-			<div class="return" onclick="location.href ='/xcview/html/shop/'">
+			<div class="return" onclick="location.href ='/xcview/html/shop/shop.html'">
 				<img src="/xcview/images/backicon.png" alt="" class="">
 			</div>
 			<div class="title">支付成功</div>
