--- a/wechat/src/main/webapp/xcview/html/shop/shop-commentary.html
+++ b/wechat/src/main/webapp/xcview/html/shop/shop-commentary.html
@@ -153,7 +153,7 @@
 				album.forEach(function(val,idx){ 
 					var div=$('<li><p><img src="/xcview/images/select_close.png" style="width:0.3rem;"></p></li>');
 					var img=$("<img />");
-					img.attr("src",val.data);
+					img.attr("src",val);
 					div.append(img);
 					save.append(div);
 					isPiclength()
