--- a/wechat/src/main/webapp/xcview/html/shop/commodity_details.html
+++ b/wechat/src/main/webapp/xcview/html/shop/commodity_details.html
@@ -509,6 +509,11 @@
         var quantity = 1;
         var flag = false;
         
+
+        //当前库存不足
+        if(currentSku.isOutOfStock){
+        	return;
+        }
         //库存id
         skuId =  currentSku.id;
         //数量
