搜索列表刷新

--- a/wechat/src/main/webapp/xcview/html/shop/shop.html
+++ b/wechat/src/main/webapp/xcview/html/shop/shop.html
@@ -57,6 +57,11 @@
 	.minirefresh-wrap{
 		bottom: .98rem;
 	}
+	/*处理ui*/
+	.product_list{
+		background: #F0F0F0;
+    	overflow: hidden;
+	}
 </style>
 </head>
 
