添加删除订单接口

--- a/wechat/src/main/webapp/xcview/html/shop/line_item.html
+++ b/wechat/src/main/webapp/xcview/html/shop/line_item.html
@@ -141,7 +141,7 @@
 				<div class="fund_main">
 					<div class="payment_details">
 						<div class="total fund_title">商品总价</div>
-						<div class="yuan">￥{{amount}}</div>
+						<div class="yuan">￥{{price}}</div>
 					</div>
 					<div class="payment_details">
 						<div class="fund_title">运费</div>
@@ -149,11 +149,11 @@
 					</div>
 					<div class="payment_details">
 						<div class="fund_title">优惠金额</div>
-						<div class="yuan">-￥10.00</div>
+						<div class="yuan">-￥{{preferentialAmount}}</div>
 					</div>
 					<div class="payment_details">
 						<div class="fund_title">需付款（含运费）</div>
-						<div class="yuans">￥20.00</div>
+						<div class="yuans">￥{{amount}}</div>
 					</div>
 				</div>
 			</div>
