--- a/wechat/src/main/webapp/xcview/html/shop/search_listings.html
+++ b/wechat/src/main/webapp/xcview/html/shop/search_listings.html
@@ -37,6 +37,7 @@
 
 	/*处理刷新*/
 	.minirefresh-wrap{
+		width: 7.6rem;
 		top: 1.1rem;
 		/*padding-bottom: 1.6rem;*/
 		/*z-index: -1;*/
@@ -67,6 +68,7 @@
 	}
 	.product_list{
 		overflow: hidden;
+		background:#f0f0f0;
 	}
 </style>
 </head>
@@ -77,7 +79,7 @@
 		<div class="return" onclick="location.href ='/xcview/html/shop/shop.html'">
 			<img src="/xcview/images/backicon.png" alt="" />
 		</div>
-		<div class="header">
+		<div class="header" onclick="location.href ='/xcview/html/shop/search_goods.html'">
 			<img src="/xcview/images/sousuo0.png" alt="" />
 			<!--<span calss="header_default">搜索好货</span>
 			<span calss="tacitly_approve">搜索好货</span>-->
@@ -139,7 +141,7 @@
 								<img src="{{item.doctor.avatar}}" alt="" />
 								<span>{{item.doctor.name}}</span>
 							 {{else}}
-								<img src="/xcview/images/touxiang.png" alt="" />
+								<img src="/xcview/images/regards.png" alt="" />
 								<span></span>
 							 {{/if}}
 							   医师 推荐
@@ -151,6 +153,7 @@
 	
 			</div>
 		</div>
+		<div class=""></div>
 	</div>
 	<!-- 中间内容结束 -->
 </body>
