--- a/wechat/src/main/webapp/xcview/html/shop/shop.html
+++ b/wechat/src/main/webapp/xcview/html/shop/shop.html
@@ -149,7 +149,7 @@
 					{{if item.productImages != null}}
 					<img src="{{item.productImages[0].source}}" alt="" class="surface_plot" />
 					{{else}}
-					<img src="/xcview/images/xianxia_03.jpg" alt="" class="surface_plot" />
+					<img src="/xcview/images/video_bg.png" alt="" class="surface_plot" />
 					{{/if}}
 
 					<div class="title">{{item.name}}</div>
@@ -159,13 +159,13 @@
 
 						{{if item.doctor != null}}
 						<img src="{{item.doctor.avatar}}" alt="" />
-						<span>{{item.doctor.name}}</span>
+						<span>{{item.doctor.name}}医师 推荐</span>
 						{{else}}
 						<img src="/xcview/images/touxiang.png" alt="" />
-						<span>11111</span>
+						<span>医师 推荐</span>
 						{{/if}}
 
-						医师 推荐
+						
 					</div>
 				</li>
 				
@@ -241,8 +241,12 @@
 	}
 	if(wv==null){
 		$(".footer").show();
+		$(".minirefresh-wrap").css("bottom","7.6rem");
+		$(".minirefresh-wrap").css("bottom",".98rem");
 	}else{
 		$(".footer").hide();
+		$(".minirefresh-wrap").css("bottom","0");
+		$(".minirefresh-wrap").css("width","7.5rem");
 	}
 
 	var token = getParam("token");
