--- a/wechat/src/main/webapp/xcview/html/shop/shop.html
+++ b/wechat/src/main/webapp/xcview/html/shop/shop.html
@@ -149,7 +149,7 @@
 					{{if item.productImages != null}}
 					<img src="{{item.productImages[0].source}}" alt="" class="surface_plot" />
 					{{else}}
-					<img src="/xcview/images/video_bg.png" alt="" class="surface_plot" />
+					<img src="/xcview/images/defaults.png" alt="" class="surface_plot" />
 					{{/if}}
 
 					<div class="title">{{item.name}}</div>
