[feat]商城-完善流程

--- a/wechat/src/main/webapp/xcview/html/shop/order_center.html
+++ b/wechat/src/main/webapp/xcview/html/shop/order_center.html
@@ -240,7 +240,7 @@
 </body>
 
 
-<script type="text/javascript" src="/xcview/js/shop/confirm_order.js"></script>
+<!--<script type="text/javascript" src="/xcview/js/shop/confirm_order.js"></script>-->
 <script type="text/javascript" src="/xcview/js/shop/order_center.js"></script>
 
 
