--- a/wechat/src/main/webapp/xcview/html/shop/recommend.html
+++ b/wechat/src/main/webapp/xcview/html/shop/recommend.html
@@ -79,7 +79,7 @@
 	<!-- 头部区域开始 -->
 	<header>
 		<div class="header" id="header">
-			<div class="return" onclick="javascript:history.go(-1);">
+			<div class="return" onclick="goHistory()">
 				<img src="/xcview/images/backicon.png" alt="" class="return_class" />
 			</div>
 			
