--- a/wechat/src/main/webapp/xcview/html/shop/shop.html
+++ b/wechat/src/main/webapp/xcview/html/shop/shop.html
@@ -180,7 +180,7 @@
 	
 	<!-- 底部开始 -->
 	<div class="hidden_field"></div>
-	<div class="footer" style="display: none">
+	<div class="footer shop" style="display: none">
 		<ul>
 			<li>
 				<a href="/xcview/html/physician/index.html" class="physician" style="width: 0.42rem;height: 0.42rem;background: url(/xcview/images/physicians_nav.png) no-repeat center;background-size: 0.42rem 0.42rem;margin-top: 0.14rem;"></a>
