--- a/wechat/src/main/webapp/xcview/html/shop/shop-logistics.html
+++ b/wechat/src/main/webapp/xcview/html/shop/shop-logistics.html
@@ -33,11 +33,11 @@
 			</div>
 			<div class="ware-main">
 				<div class="ware-img z">
-					<img src="/xcview/images/anchor_entry.jpg" alt="商品" />
+					<img class="orderImg" src="" alt="商品" />
 				</div>
 				<p>运输中</p>
-				<p>本商品由【中通快递】承运</p>
-				<p>运单号  265375604033</p>
+				<p class="kuaidiName"></p>
+				<p class="orderSn"></p>
 			</div>
 			<!--物流信息-->
 			<div class="logistics-wrap">
