--- a/wechat/src/main/webapp/xcview/html/shop/search_goods.html
+++ b/wechat/src/main/webapp/xcview/html/shop/search_goods.html
@@ -48,9 +48,9 @@
 						{{each items as item i}}
 						{{if item.name !=null}}
 							
-							<input type="text" name="" value="" autocomplete="off"  id="header_input" placeholder="大家都在搜：{{item.name}}" />
+							<input type="text" name="" value="" autocomplete="off" class="aaa"  id="header_input" placeholder="大家都在搜：{{item.name}}" />
 						{{else}}
-							<input type="text" name="" value="" autocomplete="off"  id="header_input" placeholder="" />
+							<input type="text" name="" value="" autocomplete="off"  id="header_input" placeholder="" autofocus="autofocus" />
 						{{/if}}
 						{{/each}}
 	           	 	</script>
@@ -212,12 +212,39 @@
 		//
 		}
 		
-		$("#header_input").click(function(){
+		/*$("#header_input").click(function(){
 			$(".header_seek_main").css("display","none");
-		});
+		});*/
 		
-		$("#header_input").focus();
+		/*$("#header_input").focus();
 		$("#header_input").click();
+		setTimeout(function(){
+	        $("#header_input").trigger("click").focus();
+	        alert(111);
+	    },2000);
+	    $("#header_input").trigger("click").focus();*/
+	   	
+		
+</script>
+<script>
+	window.onload = function(){
+		/*$("#header_input").click();
+	   	$("#header_input").click(function() {
+			alert(111);
+			$("#header_input").trigger("click").focus();
+			$("#header_input").focus(); 
+		});*/
+		
+		/*$(".aaa").click();
+		$(".aaa").focus(); */
+		
+		/*setTimeout(function(){
+        	$(".aaa").trigger("click").focus();
+        	$(".aaa").click();
+	        alert(23);
+	        $(".aaa").focus();
+	    },200);*/
+	};
 </script>
 
 </html>
