购物车--选择数量大小修改-手机兼容

--- a/wechat/src/main/webapp/xcview/html/shop/shopping_trolley.html
+++ b/wechat/src/main/webapp/xcview/html/shop/shopping_trolley.html
@@ -41,6 +41,9 @@
             margin: 0 auto;
             display: none;
         }
+        .shop-info .shop-info-text .shop-arithmetic{
+        	width: 1.7rem;
+        }
     </style>
 </head>
 
