token_save.js。商品详情隐藏文件。底部区域  class同类名，就隐藏了，目前没有发现引起其他问题

--- a/wechat/src/main/webapp/xcview/html/shop/shop.html
+++ b/wechat/src/main/webapp/xcview/html/shop/shop.html
@@ -323,6 +323,7 @@
 			$(".option_recommend").addClass("option_recommend_width");
 			$(".option_hottest").addClass("option_hottest_width");
 			$(".low_to_high").addClass("low_to_high_width");
+			$(".low_to_high").addClass("default_click");
 		});
 		//由低到高
 		$(".low_to_high").click(function(){
@@ -341,6 +342,7 @@
 			$(".option_hottest").addClass("option_hottest_width");
 			$(".option_price").addClass("option_newest_width");
 			$(".down").addClass("down_width");
+			$(".down").addClass("default_click");
 		});
 		//由高到低
 		$(".down").click(function(){
