--- a/wechat/src/main/webapp/xcview/html/shop/commodity_details.html
+++ b/wechat/src/main/webapp/xcview/html/shop/commodity_details.html
@@ -441,7 +441,7 @@
 <script type="text/javascript" src="/xcview/js/common/mui.min.js"></script> 
 <script type="text/JavaScript" src="//res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
 
-<script type="text/javascript" src="/xcview/js/shop/token_save.js"></script>
+<!--<script type="text/javascript" src="/xcview/js/shop/token_save.js"></script>-->
 <script type="text/javascript" src="/xcview/js/common/common.js?version=ed749a7870&version=276907c86a"></script> 
 
 <script type="text/javascript" src="/xcview/js/common/template.js?version=dd622e58c9"></script>   <!--模板引入-->
