--- a/wechat/src/main/webapp/xcview/html/shop/shopping_trolley.html
+++ b/wechat/src/main/webapp/xcview/html/shop/shopping_trolley.html
@@ -178,7 +178,7 @@
                             <h4 class="">{{cartItem.sku.name}}</h4>
                             <div class="inventory"><span
                                     class="packaging">{{cartItem.sku.specifications}}</span>（库存<span
-                                    class="number_packages">{{cartItem.sku.stock}}</span>件）<img
+                                    class="number_packages">{{cartItem.sku.availableStock}}</span>件）<img
                                     src="/xcview/images/bot.png" alt="" class="select" style="display: inline"
                                     data-pid="{{cartItem.sku.productId}}" data-sid="{{cartItem.sku.id}}"/>
                                 <div class="selectbg"></div>
