[feat]商城-完善支付流程

--- a/wechat/src/main/webapp/xcview/html/shop/method.html
+++ b/wechat/src/main/webapp/xcview/html/shop/method.html
@@ -63,10 +63,10 @@
 		<div class="payment_title">选择支付方式</div>
 		<div class="payment_ul">
 			<ul id="ul">
-				<li class="ul_li" data-value="alipayWapPaymentPlugin">
-					<img src="/xcview/images/pay01.png" class="BTCpanda" />支付宝
-					<div class="ul_li_bg"></div>
-				</li>
+				<!--<li class="ul_li" data-value="alipayWapPaymentPlugin">-->
+					<!--<img src="/xcview/images/pay01.png" class="BTCpanda" />支付宝-->
+					<!--<div class="ul_li_bg"></div>-->
+				<!--</li>-->
 				<li class="ul_li" data-value="wechatPay" >
 					<img src="/xcview/images/weixin_img.png" class="weixin_img" />微信
 					<div class="ul_li_bg"></div>
