--- a/wechat/src/main/webapp/xcview/html/shop/payment_success.html
+++ b/wechat/src/main/webapp/xcview/html/shop/payment_success.html
@@ -50,7 +50,7 @@
 			<div class="actual_payment">实付款<span class="amount"></span></div>
 			<div class="button">
 				<div class="index" onclick="location.href ='/xcview/html/shop/shop.html'">商城首页</div>
-				<div class="details" onclick="location.href ='/xcview/html/shop/commodity_details.html'">订单详情</div>
+				<div class="details" onclick="location.href ='/xcview/html/shop/order_center.html'">订单列表</div>
 			</div>
 		</div>
 		<div class="object_error">
@@ -76,7 +76,7 @@
     var paymentPluginName = getParam("paymentPluginName");
     $(".paymentPluginName").html(paymentPluginName);
     var sn = getParam("sn");
-    alert(sn);
+//    alert(sn);
 </script>
 
 </html>
