--- a/wechat/src/main/webapp/xcview/html/shop/commodity_details.html
+++ b/wechat/src/main/webapp/xcview/html/shop/commodity_details.html
@@ -545,7 +545,7 @@
 					var preNumber = $(".shopping_quantity").html();
 					totalQuantity = Number(cartQuantity) + Number(preNumber);
                     $('.shopping_quantity').html(totalQuantity);
-                    
+                    jqtoast("已加入购物车");
 				}
 			});
 		}else{
