禁止--商品详情数量输入框点击输入。隐藏语音直播模块-中医师。修改首页banner图

--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -563,7 +563,7 @@
 				<ul>
 					<li class="filtrate_all" value="" onclick="postsType(this)">全部<span class="span">动态</span></li>
 					<li class="filtrate_sinatv" value="1" onclick="postsType(this)">视频直播</li>
-					<li class="filtrate_sinatv1" value="6" onclick="postsType(this)">语音直播</li>
+					<!--<li class="filtrate_sinatv1" value="6" onclick="postsType(this)">语音直播</li>-->
 					<li class="filtrate_course" value="2" onclick="postsType(this)">课程<span class="span">动态</span></li>
 					<li class="filtrate_consilia" value="3" onclick="postsType(this)">医案<span class="span">动态</span></li>
 					<li class="filtrate_essay"value="4" onclick="postsType(this)">文章<span class="span">动态</span></li>
