--- a/wechat/src/main/webapp/xcview/html/shop/shop.html
+++ b/wechat/src/main/webapp/xcview/html/shop/shop.html
@@ -36,7 +36,7 @@
 	/*处理刷新*/
 	.minirefresh-wrap{
 		width: 7.6rem;
-		top: 5rem;
+		top: 4.8rem !important;
 	}
 	.minirefresh-theme-default .minirefresh-downwrap{
 		height: 1rem;
@@ -53,6 +53,7 @@
 	}
 	.minirefresh-scroll{
 		background: none;
+		margin-top: .2rem;
 	}
 	.minirefresh-wrap{
 		bottom: .98rem;
@@ -365,6 +366,7 @@
 		$(".advices").click(function(){
 			jqtoast("熊猫客服休息中，稍后报道！");
 		});
+		
 	};
 </script>
 </html>
