--- a/wechat/src/main/webapp/xcview/html/shop/commodity_details.html
+++ b/wechat/src/main/webapp/xcview/html/shop/commodity_details.html
@@ -427,6 +427,7 @@
 					<div class="determine">确定</div>
 				</div>
 			</div>
+			<div class="close">×</div>
 		</div>
 	</div>
 	<!-- 点击购物车出现提示结束 -->
@@ -558,6 +559,11 @@
     });
 	// 点击详情背景色
 	$('.shopping_trolley_bg').click(function(){
+		$('.shopping_trolley').hide();
+	});
+
+	// 点击关闭按钮
+	$('.close').click(function(){
 		$('.shopping_trolley').hide();
 	});
 
