修改--全部推荐。全部评价--点击关闭  规格框。。添加  首页默认封面图

--- a/wechat/src/main/webapp/xcview/html/shop/recommend.html
+++ b/wechat/src/main/webapp/xcview/html/shop/recommend.html
@@ -223,6 +223,7 @@
 					<div class="determine">确定</div>
 				</div>
 			</div>
+			<div class="close">×</div>
 		</div>
 	</div>
 	<!-- 点击购物车出现提示结束 -->
@@ -329,6 +330,11 @@
 		$('.shopping_trolley_bg').click(function(){
 			$('.shopping_trolley').hide();
 		});
+		// 点击关闭按钮
+		$('.close').click(function(){
+			$('.shopping_trolley').hide();
+		});
+		
 		// 点击客服
 		$(".service").click(function(){
 			jqtoast("熊猫客服休息中，稍后报道！");
