--- a/wechat/src/main/webapp/xcview/html/shop/all_evaluation.html
+++ b/wechat/src/main/webapp/xcview/html/shop/all_evaluation.html
@@ -208,6 +208,7 @@
 					<div class="determine">确定</div>
 				</div>
 			</div>
+			<div class="close">×</div>
 		</div>
 	</div>
 	<!-- 点击购物车出现提示结束 -->
@@ -337,6 +338,12 @@
 		$('.shopping_trolley_bg').click(function(){
 			$('.shopping_trolley').hide();
 		});
+		
+		// 点击关闭按钮
+		$('.close').click(function(){
+			$('.shopping_trolley').hide();
+		});
+		
 		// 点击客服
 		$(".service").click(function(){
 			jqtoast("熊猫客服休息中，稍后报道！");
