--- a/wechat/src/main/webapp/xcview/html/shop/payment_success.html
+++ b/wechat/src/main/webapp/xcview/html/shop/payment_success.html
@@ -27,7 +27,11 @@
 	}	
 </script>
 </head>
-
+<style>
+	finished{
+		display: none;
+	}
+</style>
 <body style="background: #f0f0f0;">
 	<!-- 头部区域开始 -->
 	<header>
@@ -35,7 +39,8 @@
 			<div class="return" onclick="location.href ='/xcview/html/shop/shop.html'">
 				<img src="/xcview/images/backicon.png" alt="" class="">
 			</div>
-			<div class="title">支付成功</div>
+			<div class="title ongoing">等待支付完成</div>
+			<div class="title finished">支付成功</div>
 		</div>
 	</header>
 	<div class="header_hidden_field"></div>
@@ -44,28 +49,29 @@
 	<!-- 中间内容开始 -->
 	<div class="center">
 		<div class="main">
-			<div class="win">
+			<div class="win ongoing">
+				<img src="/xcview/images/shop/win.png" alt="" />等待支付完成
+			</div>
+			<div class="win finished">
 				<img src="/xcview/images/shop/win.png" alt="" />支付成功
 			</div>
-			<div class="actual_payment">实付款<span class="amount"></span></div>
+			<div class="actual_payment finished">实付款<span class="amount"></span></div>
 			<div class="button">
 				<div class="index" onclick="location.href ='/xcview/html/shop/shop.html'">商城首页</div>
 				<div class="details" onclick="location.href ='/xcview/html/shop/order_center.html'">订单列表</div>
 			</div>
 		</div>
-		<div class="object_error">
+
+		<div class="object_error finished">
 			<div class="object_error_main">
 				<div class="pay">支付方式</div>
-				<div class="pattern paymentPluginName">支付宝</div>
+				<div class="pattern paymentPluginName"></div>
 			</div>
 		</div>
 		<div class="warm_prompt">温馨提示：商家不会以商品或订单异常，系统升级为由要求您点击任何链接或提供个人信息进行退款操作</div>
 	</div>
 	<!-- 中间内容结束 -->
 
-	
-
-	
 </body>
 <script type="text/javascript" src="/xcview/js/common/jquery-2.1.4.min.js"></script>
 <script type="text/javascript" src="/xcview/js/common/mui.min.js"></script>
@@ -76,7 +82,12 @@
     var paymentPluginName = getParam("paymentPluginName");
     $(".paymentPluginName").html(paymentPluginName);
     var sn = getParam("sn");
-//    alert(sn);
+    requestGetService("/xczh/shop/isPaySuccess/"+sn, null, function (data) {
+        if(data.resultObject.isPaySuccess){
+			$(".ongoing").hide();
+			$(".finished").show();
+		}
+    });
 </script>
 
 </html>
