订单中心--添加默认图

--- a/wechat/src/main/webapp/xcview/html/shop/shopping_trolley.html
+++ b/wechat/src/main/webapp/xcview/html/shop/shopping_trolley.html
@@ -145,7 +145,7 @@
         <li data-id="{{product.id}}">
             <img src="{{product.picture}}" alt="" class="surface_plots">
             <div class="title">{{product.name}}</div>
-            <div class="price">{{product.price}}</div>
+            <div class="price">￥{{product.price}}</div>
             {{ if product.doctor }}
             <div class="referrer">
                 <img src="{{product.doctor.avatar}}" alt="">{{product.doctor.name}}
