--- a/wechat/src/main/webapp/xcview/html/shop/shop.html
+++ b/wechat/src/main/webapp/xcview/html/shop/shop.html
@@ -225,6 +225,12 @@
 <script type="text/javascript" src="/xcview/js/common/popups.js"></script>  <!-- 公用弹框 -->
 
 
+<!--<script type="text/javascript">-->
+    <!--$(function(){-->
+        <!--var url = document.location.toString();-->
+        <!--$(".keyword").html(url.substring(40,url.length));-->
+    <!--})-->
+<!--</script>-->
 
 <!-- 选项卡固定头部 -->
 <script>
