医师动态和轮播圆点

--- a/online-web/src/main/webapp/web/html/anchors_resources.html
+++ b/online-web/src/main/webapp/web/html/anchors_resources.html
@@ -504,11 +504,11 @@
 								</div>
 								<p class="left-explain">推荐指数</p>
 								<div class="our-ratings">
-								        <img src="/web/images/star-dim.png"/>  
-								        <img src="/web/images/star-dim.png"/>  
-								        <img src="/web/images/star-dim.png"/> 
-								        <img src="/web/images/star-dim.png"/>  
-								        <img src="/web/images/star-dim.png"/> 
+								        <img src="/web/images/star-light.png" class="active" />  
+								        <img src="/web/images/star-light.png" class="active" />  
+								        <img src="/web/images/star-light.png" class="active" /> 
+								        <img src="/web/images/star-light.png" class="active" />  
+								        <img src="/web/images/star-light.png" class="active" /> 
 								        <span></span>  						
 								</div>	
 								<p class="comment-wrong select-start-null hide">请选择推荐指数！</p>
@@ -675,7 +675,7 @@
 								</div>
 								{{/if}}
 								<!--商品-->
-								{{if item.type==7}}
+								{{if item.type==6}}
 								<div class="save-class-wrap">
 										<a href="/web/html/anchors_preview.html?productId={{item.productId}}" style="width: 100%;" target="_blank">
 										<div class="class-img-shopping z">
