数量框颜色

--- a/wechat/src/main/webapp/xcview/html/shop/commodity_details.html
+++ b/wechat/src/main/webapp/xcview/html/shop/commodity_details.html
@@ -52,6 +52,9 @@
 		background: #fff;
 	}
 	.minirefresh-wrap::-webkit-scrollbar {display: none;}
+	.spinner input{
+		color: #333 !important;
+	}
 </style>
 </head>
 <body>
