--- a/wechat/src/main/webapp/xcview/html/shop/line_item.html
+++ b/wechat/src/main/webapp/xcview/html/shop/line_item.html
@@ -51,23 +51,23 @@
 	<!-- 交易状态开始 -->
 	<div class="trading_status">
 		{{if status == 'PENDING_PAYMENT'}}
-		<div class="payment_status">等待付款</div>
+		<div class="payment_status">等待买家付款</div>
 		{{else if status == 'PENDING_REVIEW'}}
-		<div class="payment_status">等待审核</div>
+		<div class="payment_status">买家已付款</div>
 		{{else if status == 'PENDING_SHIPMENT'}}
-		<div class="payment_status">等待发货</div>
+		<div class="payment_status">买家已付款</div>
 		{{else if status == 'SHIPPED'}}
-		<div class="payment_status">已发货</div>
+		<div class="payment_status">卖家已发货</div>
 		{{else if status == 'RECEIVED'}}
-		<div class="payment_status">已收货</div>
+		<div class="payment_status">交易成功</div>
 		{{else if status == 'COMPLETED'}}
-		<div class="payment_status">已完成</div>
+		<div class="payment_status">交易成功</div>
 		{{else if status == 'FAILED'}}
-		<div class="payment_status">已失败</div>
+		<div class="payment_status">关闭交易</div>
 		{{else if status == 'CANCELED'}}
-		<div class="payment_status">已取消</div>
+		<div class="payment_status">关闭交易</div>
 		{{else if status == 'DENIED'}}
-		<div class="payment_status">已拒绝</div>
+		<div class="payment_status">关闭交易</div>
 		{{/if}}
 
 		<div class="orderid">订单编号：{{sn}}</div>
@@ -76,6 +76,7 @@
 	<!-- 交易状态结束 -->
 
 	<!-- 物流信息开始=====等待卖家已发货-显示 -->
+	{{if status =='SHIPPED' || status =='RECEIVED' || status =='COMPLETED'}}
 	<div class="logistics" >
 		<div class="logistics_main">
 			<div class="trucks">
@@ -90,6 +91,7 @@
 			</div>
 		</div>
 	</div>
+	{{/if}}
 	<!-- 物流信息结束 -->
 
 	<!-- 收件人开始 -->
@@ -149,10 +151,10 @@
 						<div class="fund_title">运费</div>
 						<div class="yuan">+￥{{freight}}</div>
 					</div>
-					<div class="payment_details">
+					<!--<div class="payment_details">
 						<div class="fund_title">优惠金额</div>
 						<div class="yuan">-￥{{preferentialAmount}}</div>
-					</div>
+					</div>-->
 					<div class="payment_details">
 						<div class="fund_title">需付款（含运费）</div>
 						<div class="yuans">￥{{amount}}</div>
@@ -172,7 +174,7 @@
 					<div class="cancel_order" data-sn="{{sn}}">取消订单</div>
 					
 					<!-- 买家已付款 -->
-					{{else if status == 'PENDING_PAYMENT' || status == 'PENDING_SHIPMENT'}}
+					{{else if status == 'PENDING_REVIEW' || status == 'PENDING_SHIPMENT'}}
 					<div class="buy_again" onclick='againBuy("{{item.sn}}")'>再次购买</div>
 
 					<!-- 卖家已发货 -->
