--- a/wechat/src/main/webapp/xcview/html/shop/order_center.html
+++ b/wechat/src/main/webapp/xcview/html/shop/order_center.html
@@ -163,23 +163,23 @@
 				{{/if}}
 				<!-- 多种状态 -->
 				{{if item.status == 'PENDING_PAYMENT'}}
-				<div class="payment_operation">等待付款</div>
+				<div class="payment_operation">等待买家付款</div>
 				{{else if item.status == 'PENDING_REVIEW'}}
-				<div class="payment_operation">等待审核</div>
+				<div class="payment_operation">买家已付款</div>
 				{{else if item.status == 'PENDING_SHIPMENT'}}
-				<div class="payment_operation">等待发货</div>
+				<div class="payment_operation">买家已付款</div>
 				{{else if item.status == 'SHIPPED'}}
-				<div class="payment_operation">已发货</div>
+				<div class="payment_operation">卖家已发货</div>
 				{{else if item.status == 'RECEIVED'}}
-				<div class="payment_operation">已收货</div>
+				<div class="payment_operation">交易成功</div>
 				{{else if item.status == 'COMPLETED'}}
-				<div class="payment_operation">已完成</div>
+				<div class="payment_operation">交易成功</div>
 				{{else if item.status == 'FAILED'}}
-				<div class="payment_operation">已失败</div>
+				<div class="payment_operation">关闭交易</div>
 				{{else if item.status == 'CANCELED'}}
-				<div class="payment_operation">已取消</div>
+				<div class="payment_operation">关闭交易</div>
 				{{else if item.status == 'DENIED'}}
-				<div class="payment_operation">已拒绝</div>
+				<div class="payment_operation">关闭交易</div>
 				{{/if}}
 			</div>
 			<div class="main_product_details" data-sn="{{item.sn}}">
